--- a/source/form.html
+++ b/source/form.html
@@ -91,9 +91,9 @@
 
   <header class="container">
     <nav class="navigation">
-      <a href="index.html" class="navigation__link navigation__link--home navigation__link--active">Главная</a>
-      <a href="photo.html" class="navigation__link navigation__link--photo ">Фото и видео</a>
-      <a href="form.html" class="navigation__link navigation__link--form">Форма отзыва</a>
+      <a href="index.html" class="navigation__link navigation__link--home">Главная</a>
+      <a href="photo.html" class="navigation__link navigation__link--photo">Фото и видео</a>
+      <a href="form.html" class="navigation__link navigation__link--form navigation__link--active">Форма отзыва</a>
       <a href="#" class="navigation__link navigation__link--HTMLacademy">HTML Academy</a>
       <a href="index.html" class="navigation__link navigation__link--logo">
         <picture>
@@ -103,140 +103,136 @@
         </picture>
       </a>
     </nav>
-    <div class="banner banner--index">
-      <img class="banner__text banner__text--index" src="img/text-sedona-index.svg" alt="Логотип Седона" width="284" height="214">
+    <div class="banner">
+      <img class="banner__text" src="img/text-sedona.svg" alt="Логотип Седона" width="229" height="40">
     </div>
-    <div class="introduction introduction--index">
-      <h1 class="introduction__heading introduction__heading--index">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-      <p class="introduction__text introduction__text--index">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
+    <div class="introduction">
+      <h1 class="introduction__heading">Оставьте свой отзыв</h1>
+      <p class="introduction__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
     </div>
   </header>
 
 
-      <main class="container">
-        <section class="content">
-          <h2 class="visually-hidden">Услуги, достопримечательности и наши преимущества</h2>
-          <div class="city">
-            <div class="city__text">
-              <h3 class="city__heading heading3">Настоящий городок</h3>
-              <p class="city__number">— №1 —</p>
-              <p class="city__description">
-                Седона не аттракцион для туристов,
-                там течет своя жизнь
-              </p>
-            </div>
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg">
-              <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg">
-              <img class="city__image" src="img/main-city-mobile@1x.jpg" alt="Изображение города">
-            </picture>
-          </div>
-          <div class="services">
-            <div class="services__item services__item--motel">
-              <svg width="39" height="37">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-house"></use>
-              </svg>
-              <h3 class="services__heading heading3">Жилье</h3>
-              <p class="services__description">
-                Рекомендуем пожить в настоящем мотеле, все как в кино!
-              </p>
-            </div>
-            <div class="services__item services__item--souvenirs">
-              <svg width="32" height="38">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-gift"></use>
-              </svg>
-              <h3 class="services__heading heading3">Сувениры</h3>
-              <p class="services__description">
-                Не только китайского, но и местного производства!
-              </p>
-            </div>
-            <div class="services__item services__item--food">
-              <svg width="40" height="35">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-burger"></use>
-              </svg>
-              <h3 class="services__heading heading3">Еда</h3>
-              <p class="services__description">
-                Всегда заказывайте фирменный бургер, вы не разочаруетесь!
-              </p>
-            </div>
-          </div>
-          <div class="sight">
-            <div class="sight__text">
-              <h3 class="sight__heading heading3">Там есть мост Дьявола</h3>
-              <p class="sight__number">— №2 —</p>
-              <p class="sight__description">
-                Да, по нему можно пройти!
-                Если вы осмелитесь, конечно
-              </p>
-            </div>
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg">
-              <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg">
-              <img class="sight__image" src="img/main-bridge-mobile@1x.jpg" alt="Изображение моста дьявола">
-            </picture>
-          </div>
-          <div class="advantages">
-            <div class="advantages__item">
-              <h3 class="advantages__heading heading3">Небольшая площадь</h3>
-              <p class="advantages__number">— №3 —</p>
-              <p class="advantages__description">
-                Все интересные места находятся очень близко
-              </p>
-            </div>
-            <div class="advantages__item">
-              <h3 class="advantages__heading heading3">Красивая дорога</h3>
-              <p class="advantages__number">— №4 —</p>
-              <p class="advantages__description">
-                Ехать в седону из лас-вегаса совсем не скучно!
-              </p>
-            </div>
-            <div class="advantages__item">
-              <h3 class="advantages__heading heading3">Мало туристов</h3>
-              <p class="advantages__number">— №5 —</p>
-              <p class="advantages__description">
-                Большинство едет в гранд каньон и толпится там
-              </p>
-            </div>
-          </div>
-        </section>
-        <section class="contacts">
-          <h2 class="visually-hidden">Поиск гостиницы и карта</h2>
-          <div class="booking">
-            <h2 class="booking__heading heading2">Заинтересовались?</h2>
-            <p class="booking__description">
-              Укажите предполагаемые даты поездки,
-              и мы покажем вам лучшие предложения гостиниц в седоне
-            </p>
-            <a href="#" class="booking__button button">Найти гостиницу</a>
-          </div>
-          <div class="map"></div>
-        </section>
-      </main>
-      <footer class="footer container">
-        <a href="#" class="footer__hashtag">#visitsedona</a>
-        <div class="footer__socials clearfix">
-          <a href="#" class="footer__social-link button">
-            <svg width="18" height="14">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use>
-            </svg>
-          </a>
-          <a href="#" class="footer__social-link button">
-            <svg width="9" height="18">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
-            </svg>
-          </a>
-          <a href="#" class="footer__social-link button">
-            <svg width="20" height="14">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-youtube"></use>
-            </svg>
-          </a>
+  <main class="container">
+    <form class="form" method="get" action="https://echo.htmlacademy.ru">
+      <section class="introduce">
+        <h3 class="introduce__heading heading3">Представьтесь:</h3>
+        <div class="introduce__item">
+          <label class="introduce__label" for="introduce__name">Имя*:</label>
+          <input class="introduce__input introduce__input--name" type="text" id="introduce__name" name="name" placeholder="Петр" required>
         </div>
-        <a href="#" class="footer__dev-link">
-          Разработано
-          <svg class="footer__dev-logo" width="27px" height="34px">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use>
-          </svg>
-        </a>
-      </footer>
-    </body>
-    </html>
+        <div class="introduce__item">
+          <label class="introduce__label" for="introduce__surname">Фамилия*:</label>
+          <input class="introduce__input introduce__input--surname" type="text" id="introduce__surname" name="surname" placeholder="Иванов" required>
+        </div>
+        <div class="introduce__item">
+          <label class="introduce__label" for="introduce__patronymic">Отчество:</label>
+          <input class="introduce__input introduce__input--patronymic" type="text" id="introduce__patronymic" name="patronymic" placeholder="Александрович">
+        </div>
+      </section>
+
+      <section class="feedback">
+        <h3 class="feedback__heading heading3">Контактная информация:</h3>
+        <div class="feedback__items">
+          <div class="feedback__item">
+            <label class="feedback__label feedback__label--desktop" for="feedback__phone">телефон*:</label>
+            <label class="feedback__label feedback__label--small" for="feedback__phone">Конактный телефон*:</label>
+            <input class="feedback__input" type="text" id="feedback__phone" name="phone" placeholder="Введите телефон" required>
+            <span class="feedback__icon">
+              <svg  width="18" height="18">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-phone"></use>
+              </svg>
+            </span>
+          </div>
+          <div class="feedback__item">
+            <label class="feedback__label" for="feedback__e-mail">Электронная почта*:</label>
+            <input class="feedback__input" type="text" id="feedback__e-mail" name="e-mail" placeholder="Введите e-mail" required>
+            <span class="feedback__icon">
+              <svg width="21" height="16">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-mail"></use>
+              </svg>
+            </span>
+          </div>
+        </div>
+      </section>
+
+      <section class="impression">
+        <h3 class="impression__heading heading3">Вaше общее впечатление:</h3>
+        <div class="impression__item">
+          <input class="impression__input" type="radio" id="impression__radio1" name="impression__radio"  value="+" checked>
+          <label class="impression__label" for="impression__radio1">Скорее положительное</label>
+        </div>
+        <div class="impression__item">
+          <input class="impression__input" type="radio" id="impression__radio2" name="impression__radio" value="-">
+          <label class="impression__label" for="impression__radio2">Скорее отрицательное</label>
+        </div>
+        <div class="impression__item">
+          <input class="impression__input" type="radio" id="impression__radio3" name="impression__radio" value="=">
+          <label class="impression__label" for="impression__radio3">Затрудняюсь ответить</label>
+        </div>
+      </section>
+
+      <section class="visited-sights">
+        <h3 class="visited-sights__heading heading3">Посещенные<br>достопримечательности:</h3>
+        <div class="visited-sights__items">
+          <div class="visited-sights__item visited-sights__devils-bridge">
+            <input class="visited-sights__input" id="visited-sights__devils-bridge" type="checkbox" name="visited-sights__checkbox"  value="devils-bridge" checked>
+            <label class="visited-sights__label" for="visited-sights__devils-bridge">Мост Дьявола</label>
+          </div>
+          <div class="visited-sights__item visited-sights__slide-park">
+            <input class="visited-sights__input" id="visited-sights__slide-park" type="checkbox" name="visited-sights__checkbox"  value="slide-park" checked>
+            <label class="visited-sights__label" for="visited-sights__slide-park">Слайд-парк</label>
+          </div>
+          <div class="visited-sights__item visited-sights__cathedral-rock">
+            <input class="visited-sights__input" id="visited-sights__cathedral-rock" type="checkbox" name="visited-sights__checkbox"  value="cathedral-rock" checked>
+            <label class="visited-sights__label" for="visited-sights__cathedral-rock">Гора-Колокол</label>
+          </div>
+          <div class="visited-sights__item visited-sights__red-rocks">
+            <input class="visited-sights__input" id="visited-sights__red-rocks" type="checkbox" name="visited-sights__checkbox" value="red-rocks">
+            <label class="visited-sights__label" for="visited-sights__red-rocks">Красные скалы</label>
+          </div>
+        </div>
+      </section>
+
+      <section class="emotions">
+        <h3 class="emotions__heading heading3">Опишите свои эмоции:</h3>
+        <textarea class="emotions__comment" placeholder="Опишите подробно все свои восторги" name="comment"></textarea>
+      </section>
+
+      <section class="sending">
+        <h3 class="visually-hidden">Отправить</h3>
+        <button class="sending__button button">Отправить отзыв</button>
+        <span class="sending__required-fields">* — обязательные поля</span>
+      </section>
+    </form>
+  </main>
+
+
+  <footer class="footer container">
+    <a href="#" class="footer__hashtag">#visitsedona</a>
+    <div class="footer__socials clearfix">
+      <a href="#" class="footer__social-link button">
+        <svg width="18" height="14">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use>
+        </svg>
+      </a>
+      <a href="#" class="footer__social-link button">
+        <svg width="9" height="18">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
+        </svg>
+      </a>
+      <a href="#" class="footer__social-link button">
+        <svg width="20" height="14">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-youtube"></use>
+        </svg>
+      </a>
+    </div>
+    <a href="#" class="footer__dev-link">
+      Разработано
+      <svg class="footer__dev-logo" width="27px" height="34px">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use>
+      </svg>
+    </a>
+  </footer>
+</body>
+</html>
