--- a/source/photo.html
+++ b/source/photo.html
@@ -41,7 +41,7 @@
       <g>
         <g id="Core" transform="translate(-295.000000, -464.000000)">
           <g id="thumb-up" transform="translate(295.000000, 464.000000)">
-            <path fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+            <path d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
           </g>
         </g>
       </g>
@@ -72,15 +72,15 @@
       </g>
     </symbol><symbol id="icon-video-fullscreen" viewBox="0 0 20 20">
       <g>
-        <polygon fill="#454545" points="0,0 0,3 0,6 3,6 3,3 6,3 6,0 3,0"/>
-        <polygon fill="#454545" points="3,14 0,14 0,17 0,20 3,20 6,20 6,17 3,17"/>
-        <polygon fill="#454545" points="17,0 14,0 14,3 17,3 17,6 20,6 20,3 20,0"/>
-        <polygon fill="#454545" points="17,17 14,17 14,20 17,20 20,20 20,17 20,14 17,14"/>
+        <polygon points="0,0 0,3 0,6 3,6 3,3 6,3 6,0 3,0"/>
+        <polygon points="3,14 0,14 0,17 0,20 3,20 6,20 6,17 3,17"/>
+        <polygon points="17,0 14,0 14,3 17,3 17,6 20,6 20,3 20,0"/>
+        <polygon points="17,17 14,17 14,20 17,20 20,20 20,17 20,14 17,14"/>
       </g>
     </symbol><symbol id="icon-video-replay" viewBox="0 0 16 20">
       <path d="M8,4V0L3,5l5,5V6c3.315,0,6,2.686,6,6s-2.685,6-6,6s-6-2.686-6-6H0c0,4.42,3.58,8,8,8s8-3.58,8-8S12.42,4,8,4z"/>
     </symbol><symbol id="icon-video-subtitles" viewBox="0 0 32 20">
-      <path fill="#454545" d="M29,0H3C1.35,0,0,1.35,0,3v14c0,1.65,1.35,3,3,3h26c1.65,0,3-1.35,3-3V3C32,1.35,30.65,0,29,0z M14.403,15.854c-0.545,0.108-1.104,0.164-1.678,0.164c-0.694,0-1.354-0.107-1.976-0.323c-0.623-0.214-1.172-0.562-1.646-1.041 s-0.852-1.103-1.133-1.868C7.69,12.02,7.551,11.091,7.551,10c0-1.134,0.157-2.085,0.471-2.851c0.315-0.768,0.723-1.384,1.224-1.854  c0.502-0.468,1.062-0.804,1.679-1.008c0.616-0.204,1.233-0.307,1.852-0.307c0.66,0,1.22,0.045,1.678,0.134  c0.457,0.087,0.835,0.192,1.133,0.313L15.14,6.347c-0.254-0.121-0.555-0.209-0.902-0.265C13.891,6.027,13.47,6,12.973,6 c-0.915,0-1.649,0.325-2.206,0.977c-0.558,0.651-0.836,1.663-0.836,3.031c0,0.598,0.067,1.142,0.199,1.632  c0.132,0.493,0.334,0.913,0.603,1.26c0.271,0.349,0.607,0.619,1.01,0.812c0.402,0.193,0.867,0.29,1.396,0.29  c0.496,0,0.915-0.049,1.257-0.148c0.342-0.099,0.639-0.227,0.893-0.38l0.463,1.841C15.398,15.564,14.949,15.745,14.403,15.854z   M23.101,15.854c-0.545,0.108-1.105,0.164-1.678,0.164c-0.694,0-1.354-0.107-1.976-0.323c-0.623-0.214-1.172-0.562-1.646-1.041  s-0.852-1.103-1.133-1.868c-0.281-0.767-0.421-1.695-0.421-2.786c0-1.134,0.157-2.085,0.471-2.851  c0.314-0.768,0.723-1.384,1.223-1.854c0.502-0.468,1.062-0.804,1.68-1.008c0.616-0.204,1.233-0.307,1.851-0.307 c0.661,0,1.221,0.045,1.678,0.134c0.458,0.087,0.836,0.192,1.133,0.313l-0.446,1.918c-0.253-0.121-0.554-0.209-0.901-0.265  C22.588,6.027,22.166,6,21.67,6c-0.915,0-1.649,0.325-2.206,0.977c-0.558,0.651-0.836,1.663-0.836,3.031  c0,0.598,0.067,1.142,0.199,1.632c0.132,0.493,0.334,0.913,0.603,1.26c0.271,0.349,0.606,0.619,1.009,0.812 c0.402,0.193,0.868,0.29,1.396,0.29c0.497,0,0.915-0.049,1.257-0.148c0.342-0.099,0.64-0.227,0.894-0.38l0.463,1.841  C24.096,15.564,23.646,15.745,23.101,15.854z"/>
+      <path d="M29,0H3C1.35,0,0,1.35,0,3v14c0,1.65,1.35,3,3,3h26c1.65,0,3-1.35,3-3V3C32,1.35,30.65,0,29,0z M14.403,15.854c-0.545,0.108-1.104,0.164-1.678,0.164c-0.694,0-1.354-0.107-1.976-0.323c-0.623-0.214-1.172-0.562-1.646-1.041 s-0.852-1.103-1.133-1.868C7.69,12.02,7.551,11.091,7.551,10c0-1.134,0.157-2.085,0.471-2.851c0.315-0.768,0.723-1.384,1.224-1.854  c0.502-0.468,1.062-0.804,1.679-1.008c0.616-0.204,1.233-0.307,1.852-0.307c0.66,0,1.22,0.045,1.678,0.134  c0.457,0.087,0.835,0.192,1.133,0.313L15.14,6.347c-0.254-0.121-0.555-0.209-0.902-0.265C13.891,6.027,13.47,6,12.973,6 c-0.915,0-1.649,0.325-2.206,0.977c-0.558,0.651-0.836,1.663-0.836,3.031c0,0.598,0.067,1.142,0.199,1.632  c0.132,0.493,0.334,0.913,0.603,1.26c0.271,0.349,0.607,0.619,1.01,0.812c0.402,0.193,0.867,0.29,1.396,0.29  c0.496,0,0.915-0.049,1.257-0.148c0.342-0.099,0.639-0.227,0.893-0.38l0.463,1.841C15.398,15.564,14.949,15.745,14.403,15.854z   M23.101,15.854c-0.545,0.108-1.105,0.164-1.678,0.164c-0.694,0-1.354-0.107-1.976-0.323c-0.623-0.214-1.172-0.562-1.646-1.041  s-0.852-1.103-1.133-1.868c-0.281-0.767-0.421-1.695-0.421-2.786c0-1.134,0.157-2.085,0.471-2.851  c0.314-0.768,0.723-1.384,1.223-1.854c0.502-0.468,1.062-0.804,1.68-1.008c0.616-0.204,1.233-0.307,1.851-0.307 c0.661,0,1.221,0.045,1.678,0.134c0.458,0.087,0.836,0.192,1.133,0.313l-0.446,1.918c-0.253-0.121-0.554-0.209-0.901-0.265  C22.588,6.027,22.166,6,21.67,6c-0.915,0-1.649,0.325-2.206,0.977c-0.558,0.651-0.836,1.663-0.836,3.031  c0,0.598,0.067,1.142,0.199,1.632c0.132,0.493,0.334,0.913,0.603,1.26c0.271,0.349,0.606,0.619,1.009,0.812 c0.402,0.193,0.868,0.29,1.396,0.29c0.497,0,0.915-0.049,1.257-0.148c0.342-0.099,0.64-0.227,0.894-0.38l0.463,1.841  C24.096,15.564,23.646,15.745,23.101,15.854z"/>
     </symbol><symbol id="icon-youtube" viewBox="0 0 19.979 14.015">
       <path d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835 C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/>
     </symbol><symbol id="logo-htmlacademy" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
@@ -91,8 +91,8 @@
 
   <header class="container">
     <nav class="navigation">
-      <a href="index.html" class="navigation__link navigation__link--home navigation__link--active">Главная</a>
-      <a href="photo.html" class="navigation__link navigation__link--photo ">Фото и видео</a>
+      <a href="index.html" class="navigation__link navigation__link--home">Главная</a>
+      <a href="photo.html" class="navigation__link navigation__link--photo navigation__link--active">Фото и видео</a>
       <a href="form.html" class="navigation__link navigation__link--form">Форма отзыва</a>
       <a href="#" class="navigation__link navigation__link--HTMLacademy">HTML Academy</a>
       <a href="index.html" class="navigation__link navigation__link--logo">
@@ -103,115 +103,146 @@
         </picture>
       </a>
     </nav>
-    <div class="banner banner--index">
-      <img class="banner__text banner__text--index" src="img/text-sedona-index.svg" alt="Логотип Седона" width="284" height="214">
+    <div class="banner">
+      <img class="banner__text" src="img/text-sedona.svg" alt="Логотип Седона" width="229" height="40">
     </div>
-    <div class="introduction introduction--index">
-      <h1 class="introduction__heading introduction__heading--index">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-      <p class="introduction__text introduction__text--index">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
+    <div class="introduction">
+      <h1 class="introduction__heading">Фото и видео</h1>
+      <p class="introduction__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
     </div>
   </header>
 
 
       <main class="container">
-        <section class="content">
-          <h2 class="visually-hidden">Услуги, достопримечательности и наши преимущества</h2>
-          <div class="city">
-            <div class="city__text">
-              <h3 class="city__heading heading3">Настоящий городок</h3>
-              <p class="city__number">— №1 —</p>
-              <p class="city__description">
-                Седона не аттракцион для туристов,
-                там течет своя жизнь
-              </p>
-            </div>
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg">
-              <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg">
-              <img class="city__image" src="img/main-city-mobile@1x.jpg" alt="Изображение города">
-            </picture>
-          </div>
-          <div class="services">
-            <div class="services__item services__item--motel">
-              <svg width="39" height="37">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-house"></use>
-              </svg>
-              <h3 class="services__heading heading3">Жилье</h3>
-              <p class="services__description">
-                Рекомендуем пожить в настоящем мотеле, все как в кино!
-              </p>
-            </div>
-            <div class="services__item services__item--souvenirs">
-              <svg width="32" height="38">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-gift"></use>
-              </svg>
-              <h3 class="services__heading heading3">Сувениры</h3>
-              <p class="services__description">
-                Не только китайского, но и местного производства!
-              </p>
-            </div>
-            <div class="services__item services__item--food">
-              <svg width="40" height="35">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-burger"></use>
-              </svg>
-              <h3 class="services__heading heading3">Еда</h3>
-              <p class="services__description">
-                Всегда заказывайте фирменный бургер, вы не разочаруетесь!
-              </p>
+        <section class="photo">
+          <h2 class="visually-hidden">Фотографии Седоны</h2>
+          <div class="photo__item photo__item--first">
+            <a href="#">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg">
+                <img class="photo__img" src="img/photo-sunset-mobile@1x.jpg" alt="Закат в Седоне">
+              </picture>
+            </a>
+            <div class="photo__media">
+              <div class="photo__info">
+                <h4 class="photo__title">Неродные просторы</h4>
+                <div class="photo__autor">Автор фото: Борис</div>
+              </div>
+              <div class="photo__like">
+                <svg class="photo__like-icon" width="22" height="21">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-like"></use>
+                </svg>
+                <span class="photo__like-count">1350</span>
+              </div>
             </div>
           </div>
-          <div class="sight">
-            <div class="sight__text">
-              <h3 class="sight__heading heading3">Там есть мост Дьявола</h3>
-              <p class="sight__number">— №2 —</p>
-              <p class="sight__description">
-                Да, по нему можно пройти!
-                Если вы осмелитесь, конечно
-              </p>
+
+          <div class="photo__item">
+            <a href="#">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg">
+                <img class="photo__img" src="img/photo-cactus-mobile@1x.jpg" alt="Местный кактус">
+              </picture>
+            </a>
+            <div class="photo__media">
+              <div class="photo__info">
+                <h4 class="photo__title">Местная растительность</h4>
+                <div class="photo__autor">Автор фото: Сергей</div>
+              </div>
+              <div class="photo__like">
+                <svg class="photo__like-icon" width="22" height="21">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-like"></use>
+                </svg>
+                <span class="photo__like-count">143</span>
+              </div>
             </div>
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg">
-              <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg">
-              <img class="sight__image" src="img/main-bridge-mobile@1x.jpg" alt="Изображение моста дьявола">
-            </picture>
           </div>
-          <div class="advantages">
-            <div class="advantages__item">
-              <h3 class="advantages__heading heading3">Небольшая площадь</h3>
-              <p class="advantages__number">— №3 —</p>
-              <p class="advantages__description">
-                Все интересные места находятся очень близко
-              </p>
+
+          <div class="photo__item">
+            <a href="#">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg">
+                <img class="photo__img" src="img/photo-roads-mobile@1x.jpg" alt="Дорога">
+              </picture>
+            </a>
+            <div class="photo__media">
+              <div class="photo__info">
+                <h4 class="photo__title">Дорога на север</h4>
+                <div class="photo__autor">Автор фото: Петр</div>
+              </div>
+              <div class="photo__like">
+                <svg class="photo__like-icon" width="22" height="21">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-like"></use>
+                </svg>
+                <span class="photo__like-count">96</span>
+              </div>
             </div>
-            <div class="advantages__item">
-              <h3 class="advantages__heading heading3">Красивая дорога</h3>
-              <p class="advantages__number">— №4 —</p>
-              <p class="advantages__description">
-                Ехать в седону из лас-вегаса совсем не скучно!
-              </p>
-            </div>
-            <div class="advantages__item">
-              <h3 class="advantages__heading heading3">Мало туристов</h3>
-              <p class="advantages__number">— №5 —</p>
-              <p class="advantages__description">
-                Большинство едет в гранд каньон и толпится там
-              </p>
+          </div>
+
+          <div class="photo__item photo__item--last">
+            <a href="#">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg">
+                <img class="photo__img" src="img/photo-bridge-mobile@1x.jpg" alt="Мост дьявола">
+              </picture>
+            </a>
+            <div class="photo__media">
+              <div class="photo__info">
+                <h4 class="photo__title">Мост дьявола</h4>
+                <div class="photo__autor">Автор фото: Антон</div>
+              </div>
+              <div class="photo__like">
+                <svg class="photo__like-icon" width="22" height="21">
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-like"></use>
+                </svg>
+                <span class="photo__like-count">254</span>
+              </div>
             </div>
           </div>
         </section>
-        <section class="contacts">
-          <h2 class="visually-hidden">Поиск гостиницы и карта</h2>
-          <div class="booking">
-            <h2 class="booking__heading heading2">Заинтересовались?</h2>
-            <p class="booking__description">
-              Укажите предполагаемые даты поездки,
-              и мы покажем вам лучшие предложения гостиниц в седоне
+
+        <section class="video">
+          <h2 class="video__heading heading2">Все еще сомневаетесь?</h2>
+            <p class="video__description">
+              Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
             </p>
-            <a href="#" class="booking__button button">Найти гостиницу</a>
-          </div>
-          <div class="map"></div>
+            <div class="video__player">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg">
+                <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg">
+                <img class="video__screen" src="img/video-mobile@1x.jpg" alt="Видеоплеер">
+              </picture>
+              <div class="video__controls">
+                <a href="#" class="video__replay">
+                  <svg class="video__replay-icon" width="16" height="20">
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video-replay"></use>
+                  </svg>
+                </a>
+                <div href="#" class="video__progress-bar">
+                  <div class="video__scale">
+                    <div class="video__toggle"></div>
+                  </div>
+                </div>
+                <a href="#" class="video__subtitles">
+                  <svg class="video__subtitles-icon" width="32" height="20">
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video-subtitles"></use>
+                  </svg>
+                </a>
+                <a href="#" class="video__fullscreen">
+                  <svg class="video__fullscreen-icon" width="20" height="20">
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video-fullscreen"></use>
+                  </svg>
+                </a>
+              </div>
+            </div>
         </section>
       </main>
+
+
       <footer class="footer container">
         <a href="#" class="footer__hashtag">#visitsedona</a>
         <div class="footer__socials clearfix">
