--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="css/style.css">
 
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+
+  <script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+  </script>
+  <script src="js\picturefill.js" async></script>
 </head>
 <body>
   <svg style="display: none;">
@@ -89,154 +95,150 @@
   </svg>
 
 
-  <header class="container">
-    <nav class="navigation">
-      <a href="index.html" class="navigation__link navigation__link--home navigation__link--active">Главная</a>
-      <a href="photo.html" class="navigation__link navigation__link--photo ">Фото и видео</a>
-      <a href="form.html" class="navigation__link navigation__link--form">Форма отзыва</a>
-      <a href="#" class="navigation__link navigation__link--HTMLacademy">HTML Academy</a>
-      <a href="index.html" class="navigation__link navigation__link--logo">
-        <picture>
-          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
-          <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-          <img src="img/logo-sedona-mobile.svg" alt="Седона"> <!-- width="101" height="83" -->
-        </picture>
-      </a>
-    </nav>
-    <div class="banner banner--index">
-      <img class="banner__text banner__text--index" src="img/text-sedona-index.svg" alt="Логотип Седона" width="284" height="214">
-    </div>
-    <div class="introduction introduction--index">
-      <h1 class="introduction__heading introduction__heading--index">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-      <p class="introduction__text introduction__text--index">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
-    </div>
-  </header>
+  <div class="wrapper container">
+    <header class="container">
+      <nav class="navigation">
+        <a href="index.html" class="navigation__link navigation__link--home navigation__link--active">Главная</a>
+        <a href="photo.html" class="navigation__link navigation__link--photo ">Фото и видео</a>
+        <a href="form.html" class="navigation__link navigation__link--form">Форма отзыва</a>
+        <a href="#" class="navigation__link navigation__link--HTMLacademy">HTML Academy</a>
+        <a href="index.html" class="navigation__link navigation__link--logo">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img src="img/logo-sedona-mobile.svg" alt="Седона"> <!-- width="101" height="83" -->
+          </picture>
+        </a>
+      </nav>
+      <div class="banner banner--index">
+        <img class="banner__text banner__text--index" src="img/text-sedona-index.svg" alt="Логотип Седона" width="284" height="214">
+      </div>
+      <div class="introduction introduction--index">
+        <h1 class="introduction__heading introduction__heading--index">Седона — небольшой городок&nbsp;в Аризоне, заслуживающий большего!</h1>
+        <p class="introduction__text introduction__text--index">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
+      </div>
+    </header>
 
 
-      <main class="container">
-        <section class="content">
-          <h2 class="visually-hidden">Услуги, достопримечательности и наши преимущества</h2>
-          <div class="city">
-            <div class="city__text">
-              <h3 class="city__heading heading3">Настоящий городок</h3>
-              <p class="city__number">— №1 —</p>
-              <p class="city__description">
-                Седона не аттракцион для туристов,
-                там течет своя жизнь
-              </p>
-            </div>
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg">
-              <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg">
-              <img class="city__image" src="img/main-city-mobile@1x.jpg" alt="Изображение города">
-            </picture>
-          </div>
-          <div class="services">
-            <div class="services__item services__item--motel">
-              <svg width="39" height="37">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-house"></use>
-              </svg>
-              <h3 class="services__heading heading3">Жилье</h3>
-              <p class="services__description">
-                Рекомендуем пожить в настоящем мотеле, все как в кино!
-              </p>
-            </div>
-            <div class="services__item services__item--souvenirs">
-              <svg width="32" height="38">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-gift"></use>
-              </svg>
-              <h3 class="services__heading heading3">Сувениры</h3>
-              <p class="services__description">
-                Не только китайского, но и местного производства!
-              </p>
-            </div>
-            <div class="services__item services__item--food">
-              <svg width="40" height="35">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-burger"></use>
-              </svg>
-              <h3 class="services__heading heading3">Еда</h3>
-              <p class="services__description">
-                Всегда заказывайте фирменный бургер, вы не разочаруетесь!
-              </p>
-            </div>
-          </div>
-          <div class="sight">
-            <div class="sight__text">
-              <h3 class="sight__heading heading3">Там есть мост Дьявола</h3>
-              <p class="sight__number">— №2 —</p>
-              <p class="sight__description">
-                Да, по нему можно пройти!
-                Если вы осмелитесь, конечно
-              </p>
-            </div>
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg">
-              <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg">
-              <img class="sight__image" src="img/main-bridge-mobile@1x.jpg" alt="Изображение моста дьявола">
-            </picture>
-          </div>
-          <div class="advantages">
-            <div class="advantages__item">
-              <h3 class="advantages__heading heading3">Небольшая площадь</h3>
-              <p class="advantages__number">— №3 —</p>
-              <p class="advantages__description">
-                Все интересные места находятся очень близко
-              </p>
-            </div>
-            <div class="advantages__item">
-              <h3 class="advantages__heading heading3">Красивая дорога</h3>
-              <p class="advantages__number">— №4 —</p>
-              <p class="advantages__description">
-                Ехать в седону из лас-вегаса совсем не скучно!
-              </p>
-            </div>
-            <div class="advantages__item">
-              <h3 class="advantages__heading heading3">Мало туристов</h3>
-              <p class="advantages__number">— №5 —</p>
-              <p class="advantages__description">
-                Большинство едет в гранд каньон и толпится там
-              </p>
-            </div>
-          </div>
-        </section>
-        <section class="contacts">
-          <h2 class="visually-hidden">Поиск гостиницы и карта</h2>
-          <div class="booking">
-            <h2 class="booking__heading heading2">Заинтересовались?</h2>
-            <p class="booking__description">
-              Укажите предполагаемые даты поездки,
-              и мы покажем вам лучшие предложения гостиниц в седоне
+    <main class="container">
+      <section class="content">
+        <h2 class="visually-hidden">Услуги, достопримечательности и наши преимущества</h2>
+        <div class="city">
+          <div class="city__text">
+            <h3 class="city__heading heading3">Настоящий городок</h3>
+            <p class="city__number">— №1 —</p>
+            <p class="city__description">
+              Седона не аттракцион для туристов,
+              там течет своя жизнь
             </p>
-            <a href="#" class="booking__button button">Найти гостиницу</a>
           </div>
-          <div class="map"></div>
-        </section>
-      </main>
-      <footer class="footer container">
-        <a href="#" class="footer__hashtag">#visitsedona</a>
-        <div class="footer__socials clearfix">
-          <a href="#" class="footer__social-link button">
-            <svg width="18" height="14">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use>
-            </svg>
-          </a>
-          <a href="#" class="footer__social-link button">
-            <svg width="9" height="18">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
-            </svg>
-          </a>
-          <a href="#" class="footer__social-link button">
-            <svg width="20" height="14">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-youtube"></use>
-            </svg>
-          </a>
+          <div class="city__image"></div>
         </div>
-        <a href="#" class="footer__dev-link">
-          Разработано
-          <svg class="footer__dev-logo" width="27px" height="34px">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use>
+        <div class="services">
+          <div class="services__item services__item--motel">
+            <svg width="39" height="37">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-house"></use>
+            </svg>
+            <h3 class="services__heading heading3">Жилье</h3>
+            <p class="services__description">
+              Рекомендуем пожить в настоящем мотеле, все как в кино!
+            </p>
+          </div>
+          <div class="services__item services__item--souvenirs">
+            <svg width="32" height="38">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-gift"></use>
+            </svg>
+            <h3 class="services__heading heading3">Сувениры</h3>
+            <p class="services__description">
+              Не только китайского, но и местного производства!
+            </p>
+          </div>
+          <div class="services__item services__item--food">
+            <svg width="40" height="35">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-burger"></use>
+            </svg>
+            <h3 class="services__heading heading3">Еда</h3>
+            <p class="services__description">
+              Всегда заказывайте фирменный бургер, вы&nbsp;не разочаруетесь!
+            </p>
+          </div>
+        </div>
+        <div class="sight">
+          <div class="sight__text">
+            <h3 class="sight__heading heading3">Там есть мост&nbsp;Дьявола</h3>
+            <p class="sight__number">— №2 —</p>
+            <p class="sight__description">
+              Да, по нему можно пройти!
+              Если вы осмелитесь, конечно
+            </p>
+          </div>
+          <div class="sight__image"></div>
+        </div>
+        <div class="advantages">
+          <div class="advantages__item">
+            <h3 class="advantages__heading heading3">Небольшая площадь</h3>
+            <p class="advantages__number">— №3 —</p>
+            <p class="advantages__description">
+              Все интересные места находятся очень близко
+            </p>
+          </div>
+          <div class="advantages__item">
+            <h3 class="advantages__heading heading3">Красивая дорога</h3>
+            <p class="advantages__number">— №4 —</p>
+            <p class="advantages__description">
+              Ехать в седону из лас-вегаса совсем не скучно!
+            </p>
+          </div>
+          <div class="advantages__item">
+            <h3 class="advantages__heading heading3">Мало туристов</h3>
+            <p class="advantages__number">— №5 —</p>
+            <p class="advantages__description">
+              Большинство едет в гранд каньон и толпится там
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="contacts">
+        <h2 class="visually-hidden">Поиск гостиницы и карта</h2>
+        <div class="booking">
+          <h2 class="booking__heading heading2">Заинтересовались?</h2>
+          <p class="booking__description">
+            Укажите предполагаемые даты поездки,
+            и&nbsp;мы&nbsp;покажем&nbsp;вам&nbsp;лучшие предложения гостиниц в седоне
+          </p>
+          <a href="#" class="booking__button button">Найти гостиницу</a>
+        </div>
+        <div class="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d498347.229238141!2d-112.12970712910683!3d34.85889724090713!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1518112843393" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </section>
+    </main>
+    <footer class="footer container">
+      <a href="#" class="footer__hashtag">#visitsedona</a>
+      <div class="footer__socials clearfix">
+        <a href="#" class="footer__social-link button">
+          <svg width="18" height="14">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use>
           </svg>
         </a>
-      </footer>
-    </body>
-    </html>
+        <a href="#" class="footer__social-link button">
+          <svg width="9" height="18">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
+          </svg>
+        </a>
+        <a href="#" class="footer__social-link button">
+          <svg width="20" height="14">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-youtube"></use>
+          </svg>
+        </a>
+      </div>
+      <a href="#" class="footer__dev-link">
+        Разработано
+        <svg class="footer__dev-logo" width="27px" height="34px">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use>
+        </svg>
+      </a>
+    </footer>
+    </div>
+</body>
+</html>
