--- a/source/photo.html
+++ b/source/photo.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="css/style.css">
 
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+
+  <script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+  </script>
+  <script src="js\picturefill.js" async></script>
 </head>
 <body>
   <svg style="display: none;">
@@ -89,6 +95,7 @@
   </svg>
 
 
+  <div class="wrapper container">
   <header class="container">
     <nav class="navigation">
       <a href="index.html" class="navigation__link navigation__link--home">Главная</a>
@@ -269,5 +276,6 @@
           </svg>
         </a>
       </footer>
+      </div>
     </body>
     </html>
