Добавлена автоматизация и сделана ретиновая графика

--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
 
@@ -96,7 +96,7 @@
 
 
   <div class="wrapper container">
-  <header class="container">
+  <header>
     <nav class="navigation">
       <a href="index.html" class="navigation__link navigation__link--home">Главная</a>
       <a href="photo.html" class="navigation__link navigation__link--photo">Фото и видео</a>
@@ -120,7 +120,7 @@
   </header>
 
 
-  <main class="container">
+  <main>
     <form class="form" method="get" action="https://echo.htmlacademy.ru">
       <section class="introduce">
         <h3 class="introduce__heading heading3">Представьтесь:</h3>
@@ -215,7 +215,7 @@
   </main>
 
 
-  <footer class="footer container">
+  <footer class="footer">
     <a href="#" class="footer__hashtag">#visitsedona</a>
     <div class="footer__socials clearfix">
       <a href="#" class="footer__social-link button">
