--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
 
@@ -96,7 +96,7 @@
 
 
   <div class="wrapper container">
-    <header class="container">
+    <header>
       <nav class="navigation">
         <a href="index.html" class="navigation__link navigation__link--home navigation__link--active">Главная</a>
         <a href="photo.html" class="navigation__link navigation__link--photo ">Фото и видео</a>
@@ -120,7 +120,7 @@
     </header>
 
 
-    <main class="container">
+    <main>
       <section class="content">
         <h2 class="visually-hidden">Услуги, достопримечательности и наши преимущества</h2>
         <div class="city">
@@ -213,7 +213,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer container">
+    <footer class="footer">
       <a href="#" class="footer__hashtag">#visitsedona</a>
       <div class="footer__socials clearfix">
         <a href="#" class="footer__social-link button">
