--- a/source/photo.html
+++ b/source/photo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
 
@@ -96,7 +96,7 @@
 
 
   <div class="wrapper container">
-  <header class="container">
+  <header>
     <nav class="navigation">
       <a href="index.html" class="navigation__link navigation__link--home">Главная</a>
       <a href="photo.html" class="navigation__link navigation__link--photo navigation__link--active">Фото и видео</a>
@@ -120,15 +120,40 @@
   </header>
 
 
-      <main class="container">
+      <main>
         <section class="photo">
           <h2 class="visually-hidden">Фотографии Седоны</h2>
           <div class="photo__item photo__item--first">
             <a href="#">
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg">
-                <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg">
-                <img class="photo__img" src="img/photo-sunset-mobile@1x.jpg" alt="Закат в Седоне">
+                <!-- desktop -->
+                <!-- <source
+                  type="image/webp"
+                  media="(min-width: 1200px)"
+                  srcset="img/desktop-large.webp 2x,
+                          img/desktop-small.webp 1x"> -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="img/photo-sunset-desktop@2x.jpg 2x,
+                          img/photo-sunset-desktop@1x.jpg 1x">
+
+                <!-- tablet -->
+                <!-- <source
+                  type="image/webp"
+                  media="(min-width: 768px)"
+                  srcset="img/mobile-large.webp 2x,
+                          img/mobile-small.webp 1x"> -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="img/photo-sunset-tablet@2x.jpg 2x,
+                          img/photo-sunset-tablet@1x.jpg 1x">
+
+                <!-- mobile -->
+                <!-- <source
+                  type="image/webp"
+                  srcset="img/mobile-large.webp 2x,
+                          img/mobile-small.webp 1x"> -->
+                <img class="photo__img" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" alt="Закат в Седоне">
               </picture>
             </a>
             <div class="photo__media">
@@ -148,9 +173,34 @@
           <div class="photo__item">
             <a href="#">
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg">
-                <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg">
-                <img class="photo__img" src="img/photo-cactus-mobile@1x.jpg" alt="Местный кактус">
+                <!-- desktop -->
+                <!-- <source
+                  type="image/webp"
+                  media="(min-width: 1200px)"
+                  srcset="img/desktop-large.webp 2x,
+                          img/desktop-small.webp 1x"> -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="img/photo-cactus-desktop@2x.jpg 2x,
+                          img/photo-cactus-desktop@1x.jpg 1x">
+
+                <!-- tablet -->
+                <!-- <source
+                  type="image/webp"
+                  media="(min-width: 768px)"
+                  srcset="img/mobile-large.webp 2x,
+                          img/mobile-small.webp 1x"> -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="img/photo-cactus-tablet@2x.jpg 2x,
+                          img/photo-cactus-tablet@1x.jpg 1x">
+
+                <!-- mobile -->
+                <!-- <source
+                  type="image/webp"
+                  srcset="img/mobile-large.webp 2x,
+                          img/mobile-small.webp 1x"> -->
+                <img class="photo__img" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Местный кактус">
               </picture>
             </a>
             <div class="photo__media">
@@ -170,9 +220,34 @@
           <div class="photo__item">
             <a href="#">
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg">
-                <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg">
-                <img class="photo__img" src="img/photo-roads-mobile@1x.jpg" alt="Дорога">
+                <!-- desktop -->
+                <!-- <source
+                  type="image/webp"
+                  media="(min-width: 1200px)"
+                  srcset="img/desktop-large.webp 2x,
+                          img/desktop-small.webp 1x"> -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="img/photo-roads-desktop@2x.jpg 2x,
+                          img/photo-roads-desktop@1x.jpg 1x">
+
+                <!-- tablet -->
+                <!-- <source
+                  type="image/webp"
+                  media="(min-width: 768px)"
+                  srcset="img/mobile-large.webp 2x,
+                          img/mobile-small.webp 1x"> -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="img/photo-roads-tablet@2x.jpg 2x,
+                          img/photo-roads-tablet@1x.jpg 1x">
+
+                <!-- mobile -->
+                <!-- <source
+                  type="image/webp"
+                  srcset="img/mobile-large.webp 2x,
+                          img/mobile-small.webp 1x"> -->
+                <img class="photo__img" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Дорога на север">
               </picture>
             </a>
             <div class="photo__media">
@@ -192,9 +267,34 @@
           <div class="photo__item photo__item--last">
             <a href="#">
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg">
-                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg">
-                <img class="photo__img" src="img/photo-bridge-mobile@1x.jpg" alt="Мост дьявола">
+                <!-- desktop -->
+                <!-- <source
+                  type="image/webp"
+                  media="(min-width: 1200px)"
+                  srcset="img/desktop-large.webp 2x,
+                          img/desktop-small.webp 1x"> -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="img/photo-bridge-desktop@2x.jpg 2x,
+                          img/photo-bridge-desktop@1x.jpg 1x">
+
+                <!-- tablet -->
+                <!-- <source
+                  type="image/webp"
+                  media="(min-width: 768px)"
+                  srcset="img/mobile-large.webp 2x,
+                          img/mobile-small.webp 1x"> -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="img/photo-bridge-tablet@2x.jpg 2x,
+                          img/photo-bridge-tablet@1x.jpg 1x">
+
+                <!-- mobile -->
+                <!-- <source
+                  type="image/webp"
+                  srcset="img/mobile-large.webp 2x,
+                          img/mobile-small.webp 1x"> -->
+                <img class="photo__img" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
               </picture>
             </a>
             <div class="photo__media">
@@ -219,10 +319,36 @@
             </p>
             <div class="video__player">
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg">
-                <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg">
-                <img class="video__screen" src="img/video-mobile@1x.jpg" alt="Видеоплеер">
+                <!-- desktop -->
+                <!-- <source
+                  type="image/webp"
+                  media="(min-width: 1200px)"
+                  srcset="img/desktop-large.webp 2x,
+                          img/desktop-small.webp 1x"> -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="img/video-desktop@2x.jpg 2x,
+                          img/video-desktop@1x.jpg 1x">
+
+                <!-- tablet -->
+                <!-- <source
+                  type="image/webp"
+                  media="(min-width: 768px)"
+                  srcset="img/mobile-large.webp 2x,
+                          img/mobile-small.webp 1x"> -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="img/video-tablet@2x.jpg 2x,
+                          img/video-tablet@1x.jpg 1x">
+
+                <!-- mobile -->
+                <!-- <source
+                  type="image/webp"
+                  srcset="img/mobile-large.webp 2x,
+                          img/mobile-small.webp 1x"> -->
+                <img class="photo__img" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Видеоплеер">
               </picture>
+
               <div class="video__controls">
                 <a href="#" class="video__replay">
                   <svg class="video__replay-icon" width="16" height="20">
@@ -250,7 +376,7 @@
       </main>
 
 
-      <footer class="footer container">
+      <footer class="footer">
         <a href="#" class="footer__hashtag">#visitsedona</a>
         <div class="footer__socials clearfix">
           <a href="#" class="footer__social-link button">
