--- a/source/form.html
+++ b/source/form.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="format-detection" content="address=no">
   <title>HTML Academy: Седона</title>
+  <link rel="preload" href="css/style.min.css" as="style">
+  <link rel="preload" href="fonts/ptsans.woff2" as="font">
+  <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
   <link rel="stylesheet" href="css/style.min.css">
-
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-
   <script>
     // Picture element HTML5 shiv
     document.createElement( "picture" );
   </script>
-  <script src="js\picturefill.js" async></script>
+  <script src="js\picturefill.min.js" async></script>
 </head>
 <body>
   <svg style="display: none;">
@@ -264,51 +266,6 @@
     </div>
   </section>
 
-  <script>
-    // Кнопка отправки формы
-    var sending = document.querySelector(".sending__button");
-
-    var modal_failure = document.querySelector(".modal-failure");
-    var modal_success = document.querySelector(".modal-success");
-
-    var close_modal_failure = modal_failure.querySelector(".modal-close");
-    var close_modal_success = modal_success.querySelector(".modal-close");
-
-    var inputs = document.getElementsByTagName("input");
-    sending.addEventListener("click", function (evt) {
-      evt.preventDefault();
-      for (var i = 0; i < inputs.length; i++) {
-          if (inputs[i].required === true && !inputs[i].value) {
-            modal_failure.classList.add("modal-show");
-            break;
-          } else {
-            modal_success.classList.add("modal-show");
-          }
-      }
-    });
-
-    close_modal_failure.addEventListener("click", function (evt) {
-      evt.preventDefault();
-      modal_failure.classList.remove("modal-show");
-    });
-
-    close_modal_success.addEventListener("click", function (evt) {
-      evt.preventDefault();
-      modal_success.classList.remove("modal-show");
-    });
-
-    window.addEventListener("keydown", function (evt) {
-      if (evt.keyCode === 27) {
-        if (modal_failure.classList.contains("modal-show")) {
-          modal_failure.classList.remove("modal-show");
-        }
-        if (modal_success.classList.contains("modal-show")) {
-          modal_success.classList.remove("modal-show");
-        }
-      }
-    });
-
-    //15
-  </script>
+  <script src="js\form_submit.js" async></script>
 </body>
 </html>
