Исправлена доступность чекбоксов и радиокнопок

--- a/source/form.html
+++ b/source/form.html
@@ -168,15 +168,15 @@
       <section class="impression">
         <h3 class="impression__heading heading3">Вaше общее впечатление:</h3>
         <div class="impression__item">
-          <input class="impression__input" type="radio" id="impression__radio1" name="impression__radio"  value="+" checked>
+          <input class="impression__input visually-hidden" type="radio" id="impression__radio1" name="impression__radio"  value="+" checked>
           <label class="impression__label" for="impression__radio1">Скорее положительное</label>
         </div>
         <div class="impression__item">
-          <input class="impression__input" type="radio" id="impression__radio2" name="impression__radio" value="-">
+          <input class="impression__input visually-hidden" type="radio" id="impression__radio2" name="impression__radio" value="-">
           <label class="impression__label" for="impression__radio2">Скорее отрицательное</label>
         </div>
         <div class="impression__item">
-          <input class="impression__input" type="radio" id="impression__radio3" name="impression__radio" value="=">
+          <input class="impression__input visually-hidden" type="radio" id="impression__radio3" name="impression__radio" value="=">
           <label class="impression__label" for="impression__radio3">Затрудняюсь ответить</label>
         </div>
       </section>
@@ -185,19 +185,19 @@
         <h3 class="visited-sights__heading heading3">Посещенные<br>достопримечательности:</h3>
         <div class="visited-sights__items">
           <div class="visited-sights__item visited-sights__devils-bridge">
-            <input class="visited-sights__input" id="visited-sights__devils-bridge" type="checkbox" name="visited-sights__checkbox"  value="devils-bridge" checked>
+            <input class="visited-sights__input visually-hidden" id="visited-sights__devils-bridge" type="checkbox" name="visited-sights__checkbox"  value="devils-bridge" checked>
             <label class="visited-sights__label" for="visited-sights__devils-bridge">Мост Дьявола</label>
           </div>
           <div class="visited-sights__item visited-sights__slide-park">
-            <input class="visited-sights__input" id="visited-sights__slide-park" type="checkbox" name="visited-sights__checkbox"  value="slide-park" checked>
+            <input class="visited-sights__input visually-hidden" id="visited-sights__slide-park" type="checkbox" name="visited-sights__checkbox"  value="slide-park" checked>
             <label class="visited-sights__label" for="visited-sights__slide-park">Слайд-парк</label>
           </div>
           <div class="visited-sights__item visited-sights__cathedral-rock">
-            <input class="visited-sights__input" id="visited-sights__cathedral-rock" type="checkbox" name="visited-sights__checkbox"  value="cathedral-rock" checked>
+            <input class="visited-sights__input visually-hidden" id="visited-sights__cathedral-rock" type="checkbox" name="visited-sights__checkbox"  value="cathedral-rock" checked>
             <label class="visited-sights__label" for="visited-sights__cathedral-rock">Гора-Колокол</label>
           </div>
           <div class="visited-sights__item visited-sights__red-rocks">
-            <input class="visited-sights__input" id="visited-sights__red-rocks" type="checkbox" name="visited-sights__checkbox" value="red-rocks">
+            <input class="visited-sights__input visually-hidden" id="visited-sights__red-rocks" type="checkbox" name="visited-sights__checkbox" value="red-rocks">
             <label class="visited-sights__label" for="visited-sights__red-rocks">Красные скалы</label>
           </div>
         </div>
